--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.0.13",
+    "framer-motion": "^4.1.17",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.483.0",
     "next": "15.2.2",
     "postcss": "^8.5.3",
