--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "framer-motion": "^4.1.17",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.483.0",
+    "mongodb": "^6.16.0",
+    "mongoose": "^8.15.0",
     "next": "15.2.2",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
