--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.0.13",
+    "formidable": "^3.5.4",
     "framer-motion": "^4.1.17",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.483.0",
